hphp/hack/test/typecheck/modules/internal_keyword_bad.php.exp
File "internal_keyword_bad.php", line 3, characters 3-10:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
