hphp/hack/test/typecheck/modules/internal_keyword_bad.php
<?hh
class Foo {
  internal function bar(): void {}
}
